Fix incorrect lowercase letter

--- a/language/.en.json
+++ b/language/.en.json
@@ -124,7 +124,7 @@
           "default": "Collapse category"
         },
         {
-          "label": "hover text for the Expand Category button",
+          "label": "Hover text for the Expand Category button",
           "default": "Expand category"
         },
         {
