HFP-3389 Change word/paragraph to text segment

--- a/language/.en.json
+++ b/language/.en.json
@@ -25,10 +25,10 @@
             "label": "Group name"
           },
           {
-            "label": "Words/paragraphs",
-            "entity": "word/paragraph",
+            "label": "Text segments",
+            "entity": "text segment",
             "field": {
-              "label": "Word/paragraph"
+              "label": "Text segment"
             }
           }
         ]
